k8s/rustapp-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: rust-web-dev
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000 
          volumeMounts:
            - name: rust-dev-env
              mountPath: "/usr/local/bin/rust-dev-env"
          args:
            - source /usr/local/bin/rust-dev-env/env

      volumes:
        - name: rust-dev-env
          secret:
            defaultMode: 420
            secretName: rust-dev-env

---

apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  type: NodePort
