k8s/rustapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
    - host: rustwebapp.com
      http:
        paths:
          - backend:
              service:
                name: svc-myapp
                port: 
                  number: 3030
            pathType: Exact
            path: /helloworld
            
          - backend:
              service:
                name: svc-myapp
                port:
                  number: 3030
            pathType: Prefix
            path: /questions

          - backend:
              service:
                name: svc-myapp
                port:
                  number: 3030
            pathType: Prefix
            path: /answers

          - backend:
              service:
                name: svc-myapp
                port:
                  number: 3030
            pathType: Prefix
            path: /registration

          - backend:
              service:
                name: svc-myapp
                port:
                  number: 3030
            pathType: Prefix
            path: /login
